# project

./: .gitignore  Dockerfile  README.md  main.py  notebook.ipynb  pyproject.toml
.streamlit/: config.toml
models/: naive_bayes_model.pkl  scaler.pkl
src/data/: database.py  models.py
src/logic/: auth.py  recommender.py  train_model.py
src/ui/: gradio_app.py  login_page.py
src/ui/gradio/: gradio_app.py
src/ui/streamlit/: app.py
src/ui/streamlit/pages/: 1_Login.py  2_Recommender.py  3_Results.py  4_Settings.py  5_About.py  6_Help.py
src/utils/: validation.py
