[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.0.2",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.1",
    "joblib>=1.4.2",
    "passlib[bcrypt,bycrypt]>=1.7.4",
    "sqlalchemy>=2.0.45",
]
